translated lorem ipsum to english for some reason :(

--- a/index.html
+++ b/index.html
@@ -62,99 +62,15 @@
                 </section>
                 <section id="games">
                     <h2><span class="gradientText">GAMES</span></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
-                        nihil
-                        consectetur
-                        ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis
-                        iusto
-                        deleniti
-                        cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid
-                        nesciunt
-                        suscipit
-                        numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus
-                        velit
-                        sunt
-                        corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae
-                        enim
-                        incidunt
-                        illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                        temporibus sint,
-                        molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam
-                        recusandae
-                        nulla
-                        adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam
-                        officiis
-                        dolorem
-                        eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                        necessitatibus
-                        illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta
-                        doloribus
-                        officiis
-                        neque nulla totam ab voluptatem, sit accusantium,</p>
+                    <p>The company itself is a very successful company. It will happen to the wise that the architect succeeds, further, but by right, without greed and indeed fault. This option is never taken and the consequences of the debts are therefore held at times. I will never leave open the error of pleasures, and anyone who sees his body's debts here should flee from it, or hates it because. He hates flight not with great desire for some, indeed they are, but the like? Here you have to choose the services or the body, as the result of the reason, our interests and the needs of choosing fall in the way of things that are some kind of trouble! Whether it be with pleasure that is just, or with labor that causes less trouble to a mind corrupted by pleasures, its very labors, which any one praises, are the greater to be chosen. Let us accuse him of seeking pleasure. He will criticize it with great effort. But none of the most worthy of these accusers, who are blinded by the great pleasures of the time, forsake them. It hinders the life of the body, it will result in troubles. Here, therefore, what is free, is bound not to be flattered, but takes the least labor! He who was born by right flees from pleasures and similar pleasures, the most worthy option is that laborious with the truth, because that which he errs in something to him who seeks what is just tolerable from. He hates it, the result is that the option of flight hinders the laborious flight of the finder, but to assume that they must! It should be borne, just that no one of the mind and body should be able to be able to be the consequence of the said distinction that, those most worthy of labor, for it will happen that those who do what to do should therefore reject him! Run away, him! Who, in the time of labors, has been softened to take on the pleasure of taking pleasure, but is blinded by the necessity of choosing to refuse to do what is said to be the most worthy? No one provides any pleasures to those whom the corrupt accusers want, for they are the most worthy of the truth! Some are astounded, and there is no way with the architect, for the most dignified, the pleasure of error. Amet criticizes the pleasure of repelling insight often less ad.</p>
                 </section>
                 <section id="art" class="general">
                     <h2><span class="gradientText">ART</span></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
-                        nihil
-                        consectetur
-                        ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis
-                        iusto
-                        deleniti
-                        cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid
-                        nesciunt
-                        suscipit
-                        numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus
-                        velit
-                        sunt
-                        corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae
-                        enim
-                        incidunt
-                        illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                        temporibus sint,
-                        molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam
-                        recusandae
-                        nulla
-                        adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam
-                        officiis
-                        dolorem
-                        eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                        necessitatibus
-                        illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta
-                        doloribus
-                        officiis
-                        neque nulla totam ab voluptatem, sit accusantium,</p>
+                    <p>The company itself is a very successful company. It will happen to the wise that the architect succeeds, further, but by right, without greed and indeed fault. This option is never taken and the consequences of the debts are therefore held at times. I will never leave open the error of pleasures, and anyone who sees his body's debts here should flee from it, or hates it because. He hates flight not with great desire for some, indeed they are, but the like? Here you have to choose the services or the body, as the result of the reason, our interests and the needs of choosing fall in the way of things that are some kind of trouble! Whether it be with pleasure that is just, or with labor that causes less trouble to a mind corrupted by pleasures, its very labors, which any one praises, are the greater to be chosen. Let us accuse him of seeking pleasure. He will criticize it with great effort. But none of the most worthy of these accusers, who are blinded by the great pleasures of the time, forsake them. It hinders the life of the body, it will result in troubles. Here, therefore, what is free, is bound not to be flattered, but takes the least labor! He who was born by right flees from pleasures and similar pleasures, the most worthy option is that laborious with the truth, because that which he errs in something to him who seeks what is just tolerable from. He hates it, the result is that the option of flight hinders the laborious flight of the finder, but to assume that they must! It should be borne, just that no one of the mind and body should be able to be able to be the consequence of the said distinction that, those most worthy of labor, for it will happen that those who do what to do should therefore reject him! Run away, him! Who, in the time of labors, has been softened to take on the pleasure of taking pleasure, but is blinded by the necessity of choosing to refuse to do what is said to be the most worthy? No one provides any pleasures to those whom the corrupt accusers want, for they are the most worthy of the truth! Some are astounded, and there is no way with the architect, for the most dignified, the pleasure of error. Amet criticizes the pleasure of repelling insight often less ad.</p>
                 </section>
                 <section id="socials" class="general">
                     <h2><span class="gradientText">SOCIALS</span></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
-                        nihil
-                        consectetur
-                        ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis
-                        iusto
-                        deleniti
-                        cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid
-                        nesciunt
-                        suscipit
-                        numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus
-                        velit
-                        sunt
-                        corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae
-                        enim
-                        incidunt
-                        illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                        temporibus sint,
-                        molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam
-                        recusandae
-                        nulla
-                        adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam
-                        officiis
-                        dolorem
-                        eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                        necessitatibus
-                        illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta
-                        doloribus
-                        officiis
-                        neque nulla totam ab voluptatem, sit accusantium,</p>
+                    <p>The company itself is a very successful company. It will happen to the wise that the architect succeeds, further, but by right, without greed and indeed fault. This option is never taken and the consequences of the debts are therefore held at times. I will never leave open the error of pleasures, and anyone who sees his body's debts here should flee from it, or hates it because. He hates flight not with great desire for some, indeed they are, but the like? Here you have to choose the services or the body, as the result of the reason, our interests and the needs of choosing fall in the way of things that are some kind of trouble! Whether it be with pleasure that is just, or with labor that causes less trouble to a mind corrupted by pleasures, its very labors, which any one praises, are the greater to be chosen. Let us accuse him of seeking pleasure. He will criticize it with great effort. But none of the most worthy of these accusers, who are blinded by the great pleasures of the time, forsake them. It hinders the life of the body, it will result in troubles. Here, therefore, what is free, is bound not to be flattered, but takes the least labor! He who was born by right flees from pleasures and similar pleasures, the most worthy option is that laborious with the truth, because that which he errs in something to him who seeks what is just tolerable from. He hates it, the result is that the option of flight hinders the laborious flight of the finder, but to assume that they must! It should be borne, just that no one of the mind and body should be able to be able to be the consequence of the said distinction that, those most worthy of labor, for it will happen that those who do what to do should therefore reject him! Run away, him! Who, in the time of labors, has been softened to take on the pleasure of taking pleasure, but is blinded by the necessity of choosing to refuse to do what is said to be the most worthy? No one provides any pleasures to those whom the corrupt accusers want, for they are the most worthy of the truth! Some are astounded, and there is no way with the architect, for the most dignified, the pleasure of error. Amet criticizes the pleasure of repelling insight often less ad.</p>
                 </section>
             </section>
         </section>
@@ -169,6 +85,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
 
-<script src="index.js" type="text/javascript"></script>
+<script src="index.js"></script>
 
 </html>
