--- a/index.html
+++ b/index.html
@@ -76,15 +76,61 @@
         </section>
     </div>
 
-    <!--<div id="wrapper">
-        
-    </div>-->
-
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
 
 <script src="index.js"></script>
+
+<!--Lemme pull out a TobyFox and fucking curse you for looking into the html...
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMNXXXXXNWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMNOc'',,';xXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMW0,.,okx:..dWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMWk;.;kNWW0l.'oKWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMNc.,kNWMMWXx,.'oOKXWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMXc.,xXWMMMMNO:..,';xXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMWOc..cONWMMMN0oxkc..xNWWWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWWN0ollooooldKWWWWMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMNk;..oNMMMMWWWW0l';c:;l0WMMMMMMMMMMMMMMMMMMMMMMMMMNXKx:;'.,coolc'.;c:;o0XNWMMMMMMMMMMMMMM
+MMMMMMMMMMMMNo..lXMMMMMMMMWNKOxo;.'l0NMMMMMMMMMMMMMMMMMMMWKOkc''',cdOKNWWWNX0Oxl,',';xXMMMMMMMMMMMMM
+MMMMMMMMMMMMNo.:0WMMMMMMMMMMMMWWXk:..coxXWMMWWWWWMMMWKxddl,.';:dOKNWMMMMMMMMMMWNX0kl'.;xXMMMMMMMMMMM
+MMMMMMMMMMMMNo'oXWMMMMMMMMMMMMMMMWXkl;..;lcclllllloll;.':lox0XNWMMMMMMMMMMMMMMMMMMWN0o'.;kNMMMMMMMMM
+MMMMMMMMMMMMWo.;kNMMMMMMMMMMMMMMMMMWNNKOxollodxxkOkkxddxkO0000000KXNWMMMMMMMMMMMMMMMMNk;.cNMMMMMMMMM
+MMMMMMMMMMMNk;.'dNMMMMMMMMMMMMMMMMMMMMMWNX0xdxxxxddoc,.;lllllllc,.,cdKMMMMMMMMMMMMMMMWNx'cNMMMMMMMMM
+MMMMMMMMMMM0,.;kNWMMMMMMMMMMMMMMMMMWNXKkl:,.'coooooooldKWWWWWWWNOol,'xWMMMMWWWWWWWWWMMMO,cNMMMMMMMMM
+MMMMMMMMMMMO,;ONMMWWXXXXXXXNWMMMMN0o::;,.;dx0NMMMMMMMMMMMMMMMMMMWXKl'xWMMN0o;;;;;;cOWMMO,cNMMMMMMMMM
+MMMMMMMMMMMO,cXWMN0l'......;xXWMMO,.:kKKKXWMMMMMMMMMMMMMMWKOOOOkl'',;kWMWO,  .... .;ONMO,;ONMMMMMMMM
+MMMMMMMMMW0c.cNMW0;  .':::'..;kNMk,lXWWWMMMMMMMMMWWMWKxddl,.':clcldOKWMWk;. .l0X0c. ;KMK:.'OMMMMMMMM
+MMMMMMMMMNc.,xNWO:.  cKWWWKc  ;KMO,,lllccxXNNNN0occlc,.':lox0XNWMWMMMMMXc   .OMMWx. ,0MNO;'kMMMMMMMM
+MMMMMMMMMNc.oXWWd.  .dWMMMWo. 'kNN0Okxoc',:clcc:';cldkOKNWWMMMMMMMMMMMMXc   .OMMWx. ,0MMNl,kMMMMMMMM
+MMMMMMMMMXc.oXWWd.  .oWMMMWo.  .xWMMMWWNXK0Oxollooddxxxxxk0XNWMMMMMMMMMX:   .OMMWx. ,0MMNo,kMMMMMMMM
+MMMMMMMMMNl.'xNWd.  .oNMMMNo.  .dNXKkoloolc;'.;ooooooooo;..;cloooolldKMNk,  .oKNKl. ,KMMNo,kMMMMMMMM
+MMMMMMMMMWKl.cXWKo'  ;xKXKx;  'oK0c,'.;dxxxxxkXWMMMMMMMMXkxxxxxxd:. .xNWWk'  .','..;xXWWKc,kMMMMMMMM
+MMMMMMMMMMMO,;ONNKOo,........l0NNd':OKNMMMMMMMMMMMMMMMMMMMMMWX0kl'.:xO0XX0xol;''',cOX0Okl.'kMMMMMMMM
+MMMMMMMMMMMO'.c0XK0K0Odl::cokKXK0o.,xXWMWWWMMMWXkdddddddddddo,.',ckXWWXKKXXNNNXKK00XNKc.;coKMMMMMMMM
+MMMMMMMMMMMNx,.dNNXKXXNWWWWWNXXXNKo'.:llllooooo:..,;coooooooooxOKNWMMMMWWNNWMMWNNWWWXx''OWMMMMMMMMMM
+MMMMMMMMMMMMNo.;kNWWWWWMMMMWWWWMMMWKOOOOOOkkdoooodxkOOkdc;cdk00KKKNWMMMMMMMMMMMMMWN0o'.:0MMMMMMMMMMM
+MMMMMMMMMMMMWk;.'o0WMMMMMMMMMMMMMMMMMMWNXOdl;.;lllllllcc:;:ccclc,'ckNWMMMMMMMMMMWNk;.;xXWMMMMMMMMMMM
+MMMMMMMMMMMMMWXx,.,oKWMMMMMMMMMMMMMMWXxc,..,coOXXkollllllllllllc'.,xXWMMMMMMMMMWXk;.,0WMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMWXd,.,o0NWWMMMMMMMMMW0l'....;llllc,..';:llllllloddkKWMMMMMMWWNKOd:..cONMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMWXx;.'cokKNWMMMMMMWNK0000Okxdooolcc:,';clllc,,coxO0XNNX0Oxoc'',,cONMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMWXxc:'.,:lox0XNWWXKkddol:,.;llllllclONNNNXxccl:..;cc;..:lccxKNWMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMWW0dddl'.,:cll:,..cdddoxKWWWWWWWWMMMMMMMWWWNkoodddokXWWWMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMWKOOOOOOOOO0NMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
 
 </html>
