--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" type="image/x-icon" href="TheRNGVALUEFavicon.png">
     <title>RngValue</title>
     <meta name="description"
         content="I am RngValue, a solo gamedev and a pixelartist. This website is supposed to be my portfolio, but I treat it more like an archive of my games and drawings.">
