--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             class="gradientText"><strong>Value134</strong></span>") is a <span
                             class="gradientText"><strong>software engineer</strong></span> and a self-taught solo <span
                             class="gradientText"><strong>game developer</strong></span>.</p>
-                    <h3><span class="gradientText"><strong>Socials</strong></span></h3>
+                    <h3><span class="gradientText">Socials</span></h3>
                     <div class="socialGrid">
                         <div class="socialItem"><a href="youtube.com">
                                 <svg class="roundShit youtubeSS" viewBox="0 0 512 512">
@@ -67,7 +67,7 @@
                                     </path>
                                 </svg></a></div>
                         <div class="socialItem"><a href="twitter.com">
-                            <svg class="roundShit twitterSS" viewBox="0 0 512 512">
+                                <svg class="roundShit twitterSS" viewBox="0 0 512 512">
                                     <path
                                         d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z">
                                     </path>
@@ -79,7 +79,7 @@
                                         id="coJzPtee4"></path>
                                 </svg>
                             </a></div>
-                            <div class="socialItem"><a href="itch.io">
+                        <div class="socialItem"><a href="itch.io">
                                 <svg class="roundShit itchSS" xmlns="http://www.w3.org/2000/svg"
                                     viewBox="-80 -95 400 400">
                                     <path
@@ -107,12 +107,12 @@
                                             stroke="none" fill-rule="evenodd"></path>
                                     </g>
                                 </svg></a></div>
-                                <div class="socialItem"><a href="tumblr">
-                                    <svg class="roundShit tumblrSS" viewBox="0 -10 512 512">
-                                        <path
-                                            d="M210.8 80.3c-2.3 18.3-6.4 33.4-12.4 45.2 -6 11.9-13.9 22-23.9 30.5 -9.9 8.5-21.8 14.9-35.7 19.5v50.6h38.9v124.5c0 16.2 1.7 28.6 5.1 37.1 3.4 8.5 9.5 16.6 18.3 24.2 8.8 7.6 19.4 13.4 31.9 17.5 12.5 4.1 26.8 6.1 43 6.1 14.3 0 27.6-1.4 39.9-4.3 12.3-2.9 26-7.9 41.2-15v-55.9c-17.8 11.7-35.7 17.5-53.7 17.5 -10.1 0-19.1-2.4-27-7.1 -5.9-3.5-10-8.2-12.2-14 -2.2-5.8-3.3-19.1-3.3-39.7v-91.1H345.5v-55.8h-84.4v-90H210.8z">
-                                        </path>
-                                    </svg></a></div>
+                        <div class="socialItem"><a href="tumblr">
+                                <svg class="roundShit tumblrSS" viewBox="0 -10 512 512">
+                                    <path
+                                        d="M210.8 80.3c-2.3 18.3-6.4 33.4-12.4 45.2 -6 11.9-13.9 22-23.9 30.5 -9.9 8.5-21.8 14.9-35.7 19.5v50.6h38.9v124.5c0 16.2 1.7 28.6 5.1 37.1 3.4 8.5 9.5 16.6 18.3 24.2 8.8 7.6 19.4 13.4 31.9 17.5 12.5 4.1 26.8 6.1 43 6.1 14.3 0 27.6-1.4 39.9-4.3 12.3-2.9 26-7.9 41.2-15v-55.9c-17.8 11.7-35.7 17.5-53.7 17.5 -10.1 0-19.1-2.4-27-7.1 -5.9-3.5-10-8.2-12.2-14 -2.2-5.8-3.3-19.1-3.3-39.7v-91.1H345.5v-55.8h-84.4v-90H210.8z">
+                                    </path>
+                                </svg></a></div>
                         <div class="socialItem"><a href="github.com">
                                 <svg class="roundShit githubSS" viewBox="0 0 512 512">
                                     <path
@@ -123,30 +123,27 @@
                 </section>
                 <section id="games">
                     <h2><span class="gradientText">GAMES</span></h2>
-                    <p>The company itself is a very successful company. It will happen to the wise that the architect
-                        succeeds, further, but by right, without greed and indeed fault. This option is never taken and
-                        the consequences of the debts are therefore held at times. I will never leave open the error of
-                        pleasures, and anyone who sees his body's debts here should flee from it, or hates it because.
-                        He hates flight not with great desire for some, indeed they are, but the like? Here you have to
-                        choose the services or the body, as the result of the reason, our interests and the needs of
-                        choosing fall in the way of things that are some kind of trouble! Whether it be with pleasure
-                        that is just, or with labor that causes less trouble to a mind corrupted by pleasures, its very
-                        labors, which any one praises, are the greater to be chosen. Let us accuse him of seeking
-                        pleasure. He will criticize it with great effort. But none of the most worthy of these accusers,
-                        who are blinded by the great pleasures of the time, forsake them. It hinders the life of the
-                        body, it will result in troubles. Here, therefore, what is free, is bound not to be flattered,
-                        but takes the least labor! He who was born by right flees from pleasures and similar pleasures,
-                        the most worthy option is that laborious with the truth, because that which he errs in something
-                        to him who seeks what is just tolerable from. He hates it, the result is that the option of
-                        flight hinders the laborious flight of the finder, but to assume that they must! It should be
-                        borne, just that no one of the mind and body should be able to be able to be the consequence of
-                        the said distinction that, those most worthy of labor, for it will happen that those who do what
-                        to do should therefore reject him! Run away, him! Who, in the time of labors, has been softened
-                        to take on the pleasure of taking pleasure, but is blinded by the necessity of choosing to
-                        refuse to do what is said to be the most worthy? No one provides any pleasures to those whom the
-                        corrupt accusers want, for they are the most worthy of the truth! Some are astounded, and there
-                        is no way with the architect, for the most dignified, the pleasure of error. Amet criticizes the
-                        pleasure of repelling insight often less ad.</p>
+                    <p>For game development I use either <span class="gradientText"><strong>Godot</strong></span> or
+                        <span class="gradientText"><strong>Gamemaker: Studio</strong></span>, but mostly <span
+                            class="gradientText"><strong>Godot</strong></span>.<br>(currently experimenting with
+                        Unity and RpgMaker)<br>The games I've decided to share here were all made with Godot.</p>
+                    <div class="gameGrid">
+                        <div class="gameItem"><iframe src="https://itch.io/embed/1660711?border_width=0&amp;bg_color=000000&amp;link_color=e38f00" width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/jfahb">Jumping from a high building by RngValue</a></iframe></div>
+                        <div class="gameItem"><iframe
+                                src="https://itch.io/embed/1579649?border_width=0&amp;bg_color=040000&amp;fg_color=eeeeee&amp;link_color=e38f00&amp;border_color=363636"
+                                width="206" height="165" frameborder="0"><a
+                                    href="https://rngvalue.itch.io/frogomakesyoucry">Frogo Makes You Cry by
+                                    RngValue</a></iframe></div>
+                        <div class="gameItem"><iframe
+                                src="https://itch.io/embed/1408395?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
+                                width="206" height="165" frameborder="0"><a
+                                    href="https://rngvalue.itch.io/chaosmachine">ChaosMachine by RngValue</a></iframe>
+                        </div>
+                        <div class="gameItem"><iframe
+                                src="https://itch.io/embed/1052914?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
+                                width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/bilte">Bilte'
+                                    by RngValue</a></iframe></div>
+                    </div>
                 </section>
                 <section id="art" class="general">
                     <h2><span class="gradientText">ART</span></h2>
