--- a/index.html
+++ b/index.html
@@ -60,33 +60,33 @@
                             class="gradientText"><strong>game developer</strong></span>.</p>
                     <h3><span class="gradientText">Socials</span></h3>
                     <div class="socialGrid">
-                        <div class="socialItem"><a href="youtube.com">
+                        <div class="socialItem"><a href="https://www.youtube.com/channel/UCL34Zh7mFdQ5PKmeF_DI5Bg">
                                 <svg class="roundShit youtubeSS" viewBox="0 0 512 512">
                                     <path
                                         d="M422.6 193.6c-5.3-45.3-23.3-51.6-59-54 -50.8-3.5-164.3-3.5-215.1 0 -35.7 2.4-53.7 8.7-59 54 -4 33.6-4 91.1 0 124.8 5.3 45.3 23.3 51.6 59 54 50.9 3.5 164.3 3.5 215.1 0 35.7-2.4 53.7-8.7 59-54C426.6 284.8 426.6 227.3 422.6 193.6zM222.2 303.4v-94.6l90.7 47.3L222.2 303.4z">
                                     </path>
                                 </svg></a></div>
-                        <div class="socialItem"><a href="twitter.com">
+                        <div class="socialItem"><a href="https://twitter.com/Value134">
                                 <svg class="roundShit twitterSS" viewBox="0 0 512 512">
                                     <path
                                         d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z">
                                     </path>
                                 </svg></a></div>
-                        <div class="socialItem"><a href="gamejolt.com"><svg class="roundShit gamejoltSS"
+                        <div class="socialItem"><a href="https://gamejolt.com/@rngvalue"><svg class="roundShit gamejoltSS"
                                     viewBox="-180 -180 1000 1000">
                                     <path
                                         d="M158.94 37.88L158.94 75.76L138.81 75.76L118.68 75.76L118.68 112.65L118.68 149.53L99.6 149.53L80.53 149.53L80.53 187.41L80.53 225.3L60.4 225.3L40.27 225.3L40.27 263.18L40.27 301.06L20.13 301.06L0 301.06L0 338.94L0 376.82L119.73 376.82L239.47 376.82L239.47 413.71L239.47 450.59L219.34 450.59L199.2 450.59L199.2 488.47L199.2 526.35L179.07 526.35L158.94 526.35L158.94 563.24L158.94 600.12L138.81 600.12L118.68 600.12L118.68 620.06L118.68 640L139.87 640L161.06 640L161.06 621.06L161.06 602.12L181.19 602.12L201.32 602.12L201.32 583.18L201.32 564.24L221.46 564.24L241.59 564.24L241.59 545.3L241.59 526.35L261.72 526.35L281.85 526.35L281.85 508.41L281.85 490.47L300.93 490.47L320 490.47L320 471.53L320 452.58L340.13 452.58L360.27 452.58L360.27 433.64L360.27 414.7L380.4 414.7L400.53 414.7L400.53 395.76L400.53 376.82L420.66 376.82L440.8 376.82L440.8 357.88L440.8 338.94L460.93 338.94L481.06 338.94L481.06 320L481.06 301.06L501.19 301.06L521.32 301.06L521.32 283.11L521.32 265.17L540.4 265.17L559.47 265.17L559.47 246.23L559.47 227.29L579.6 227.29L599.73 227.29L599.73 207.35L599.73 187.41L540.4 187.41L481.06 187.41L481.06 169.47L481.06 151.53L501.19 151.53L521.32 151.53L521.32 132.58L521.32 113.65L540.4 113.65L559.47 113.65L559.47 94.7L559.47 75.76L579.6 75.76L599.73 75.76L599.73 57.82L599.73 39.88L619.87 39.88L640 39.88L640 19.94L640 0L399.47 0L158.94 0L158.94 37.88M478.94 93.71L478.94 111.65L458.81 111.65L438.68 111.65L438.68 130.59L438.68 149.53L418.54 149.53L398.41 149.53L398.41 168.47L398.41 187.41L378.28 187.41L358.15 187.41L358.15 206.35L358.15 225.3L339.07 225.3L320 225.3L320 244.24L320 263.18L300.93 263.18L281.85 263.18L281.85 244.24L281.85 225.3L260.66 225.3L239.47 225.3L239.47 244.24L239.47 263.18L220.4 263.18L201.32 263.18L201.32 244.24L201.32 225.3L181.19 225.3L161.06 225.3L161.06 188.41L161.06 151.53L181.19 151.53L201.32 151.53L201.32 113.65L201.32 75.76L340.13 75.76L478.94 75.76L478.94 93.71M158.94 245.23L158.94 263.18L139.87 263.18L120.8 263.18L120.8 245.23L120.8 227.29L139.87 227.29L158.94 227.29L158.94 245.23M199.2 283.11L199.2 301.06L180.13 301.06L161.06 301.06L161.06 283.11L161.06 265.17L180.13 265.17L199.2 265.17L199.2 283.11M279.73 283.11L279.73 301.06L260.66 301.06L241.59 301.06L241.59 283.11L241.59 265.17L260.66 265.17L279.73 265.17L279.73 283.11M358.15 283.11L358.15 301.06L339.07 301.06L320 301.06L320 283.11L320 265.17L339.07 265.17L358.15 265.17L358.15 283.11M438.68 283.11L438.68 301.06L419.6 301.06L400.53 301.06L400.53 283.11L400.53 265.17L419.6 265.17L438.68 265.17L438.68 283.11M398.41 319L398.41 336.95L379.34 336.95L360.27 336.95L360.27 319L360.27 301.06L379.34 301.06L398.41 301.06L398.41 319"
                                         id="coJzPtee4"></path>
                                 </svg>
                             </a></div>
-                        <div class="socialItem"><a href="itch.io">
+                        <div class="socialItem"><a href="https://rngvalue.itch.io/">
                                 <svg class="roundShit itchSS" xmlns="http://www.w3.org/2000/svg"
                                     viewBox="-80 -95 400 400">
                                     <path
                                         d="M31.99 1.365C21.287 7.72.2 31.945 0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584 0 24.902-11.258 24.903-24.62 0 13.362 10.93 24.62 24.515 24.62 13.586 0 24.165-11.258 24.165-24.62 0 13.362 11.622 24.62 25.207 24.62h.246c13.586 0 25.208-11.258 25.208-24.62 0 13.362 10.58 24.62 24.164 24.62 13.585 0 24.515-11.258 24.515-24.62 0 13.362 11.32 24.62 24.903 24.62 11.313 0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685 0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025 0 0 1-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122a28.482 28.482 0 0 1-19.948-8.126c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5 0 0 1-19.948 8.12c-.934 0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5 0 0 1-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48 0 0 1-19.947 8.125c-7.748 0-14.778-3.11-19.906-8.123a28.025 28.025 0 0 1-4.78-6.155 27.99 27.99 0 0 1-4.736 6.155 28.49 28.49 0 0 1-19.95 8.124c-.27 0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49 0 0 1-19.95-8.123 27.992 27.992 0 0 1-4.736-6.155zm-20.486 26.49l-.002.01h.015c8.113.017 15.32 0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833 0 19.166 0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412 0-26.823-.943-38.318-2.827 0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08C57.534 94.073 72.867 94.073 76.7 94.073zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z">
                                     </path>
                                 </svg></a></div>
-                        <div class="socialItem"><a href="newgrounds.com">
+                        <div class="socialItem"><a href="https://value134.newgrounds.com/">
                                 <svg class="roundShit newgroundsSS" xmlns="http://www.w3.org/2000/svg"
                                     xmlns:xlink="http://www.w3.org/1999/xlink" id="svg" viewBox="-50, -80, 500, 500">
                                     <g id="svgg">
@@ -107,13 +107,13 @@
                                             stroke="none" fill-rule="evenodd"></path>
                                     </g>
                                 </svg></a></div>
-                        <div class="socialItem"><a href="tumblr">
+                        <div class="socialItem"><a href="https://rngvalue.tumblr.com/">
                                 <svg class="roundShit tumblrSS" viewBox="0 -10 512 512">
                                     <path
                                         d="M210.8 80.3c-2.3 18.3-6.4 33.4-12.4 45.2 -6 11.9-13.9 22-23.9 30.5 -9.9 8.5-21.8 14.9-35.7 19.5v50.6h38.9v124.5c0 16.2 1.7 28.6 5.1 37.1 3.4 8.5 9.5 16.6 18.3 24.2 8.8 7.6 19.4 13.4 31.9 17.5 12.5 4.1 26.8 6.1 43 6.1 14.3 0 27.6-1.4 39.9-4.3 12.3-2.9 26-7.9 41.2-15v-55.9c-17.8 11.7-35.7 17.5-53.7 17.5 -10.1 0-19.1-2.4-27-7.1 -5.9-3.5-10-8.2-12.2-14 -2.2-5.8-3.3-19.1-3.3-39.7v-91.1H345.5v-55.8h-84.4v-90H210.8z">
                                     </path>
                                 </svg></a></div>
-                        <div class="socialItem"><a href="github.com">
+                        <div class="socialItem"><a href="https://github.com/RngValue">
                                 <svg class="roundShit githubSS" viewBox="0 0 512 512">
                                     <path
                                         d="M256 70.7c-102.6 0-185.9 83.2-185.9 185.9 0 82.1 53.3 151.8 127.1 176.4 9.3 1.7 12.3-4 12.3-8.9V389.4c-51.7 11.3-62.5-21.9-62.5-21.9 -8.4-21.5-20.6-27.2-20.6-27.2 -16.9-11.5 1.3-11.3 1.3-11.3 18.7 1.3 28.5 19.2 28.5 19.2 16.6 28.4 43.5 20.2 54.1 15.4 1.7-12 6.5-20.2 11.8-24.9 -41.3-4.7-84.7-20.6-84.7-91.9 0-20.3 7.3-36.9 19.2-49.9 -1.9-4.7-8.3-23.6 1.8-49.2 0 0 15.6-5 51.1 19.1 14.8-4.1 30.7-6.2 46.5-6.3 15.8 0.1 31.7 2.1 46.6 6.3 35.5-24 51.1-19.1 51.1-19.1 10.1 25.6 3.8 44.5 1.8 49.2 11.9 13 19.1 29.6 19.1 49.9 0 71.4-43.5 87.1-84.9 91.7 6.7 5.8 12.8 17.1 12.8 34.4 0 24.9 0 44.9 0 51 0 4.9 3 10.7 12.4 8.9 73.8-24.6 127-94.3 127-176.4C441.9 153.9 358.6 70.7 256 70.7z">
