--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             class="gradientText"><strong>Value134</strong></span>") is a <span
                             class="gradientText"><strong>software engineer</strong></span> and a self-taught solo <span
                             class="gradientText"><strong>game developer</strong></span>.</p>
-                    <h3><span class="gradientText">Socials</span></h3>
+                    <h3><span class="gradientText">Socials (where to contact me)</span></h3>
                     <div class="socialGrid">
                         <div class="socialItem"><a href="https://www.youtube.com/channel/UCL34Zh7mFdQ5PKmeF_DI5Bg">
                                 <svg class="roundShit youtubeSS" viewBox="0 0 512 512">
