--- a/index.html
+++ b/index.html
@@ -128,21 +128,20 @@
                             class="gradientText"><strong>Godot</strong></span>.<br>(currently experimenting with
                         Unity and RpgMaker)<br>The games I've decided to share here were all made with Godot.</p>
                     <div class="gameGrid">
-                        <div class="gameItem"><iframe src="https://itch.io/embed/1660711?border_width=0&amp;bg_color=000000&amp;link_color=e38f00" width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/jfahb">Jumping from a high building by RngValue</a></iframe></div>
-                        <div class="gameItem"><iframe
+                        <div title="Jumping from a high building by RngValue" class="gameItem"><iframe src="https://itch.io/embed/1660711?border_width=0&amp;bg_color=000000&amp;link_color=e38f00" width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/jfahb"></a></iframe></div>
+                        <div title="Frogo Makes You Cry by
+                        RngValue" class="gameItem"><iframe
                                 src="https://itch.io/embed/1579649?border_width=0&amp;bg_color=040000&amp;fg_color=eeeeee&amp;link_color=e38f00&amp;border_color=363636"
                                 width="206" height="165" frameborder="0"><a
-                                    href="https://rngvalue.itch.io/frogomakesyoucry">Frogo Makes You Cry by
-                                    RngValue</a></iframe></div>
-                        <div class="gameItem"><iframe
+                                    href="https://rngvalue.itch.io/frogomakesyoucry"></a></iframe></div>
+                        <div title="ChaosMachine by RngValue" class="gameItem"><iframe
                                 src="https://itch.io/embed/1408395?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
                                 width="206" height="165" frameborder="0"><a
-                                    href="https://rngvalue.itch.io/chaosmachine">ChaosMachine by RngValue</a></iframe>
+                                    href="https://rngvalue.itch.io/chaosmachine"></a></iframe>
                         </div>
-                        <div class="gameItem"><iframe
+                        <div title="Bilte' by RngValue" class="gameItem"><iframe
                                 src="https://itch.io/embed/1052914?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
-                                width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/bilte">Bilte'
-                                    by RngValue</a></iframe></div>
+                                width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/bilte"></a></iframe></div>
                     </div>
                 </section>
                 <section id="art" class="general">
