--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <section id="everythingwithin">
                 <h2 style="display: none;">everything within</h2>
                 <section id="about">
-                    <h2><span class="gradientText">ABOUT</span></h2>
+                    <h2><span class="gradient-text">ABOUT</span></h2>
                     <iframe class="aboutVideo" src="https://www.youtube.com/embed/ULrxa1KVzZU"
                         title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                    <p><span class="gradientText"><strong>RngValue</strong></span> (sometimes "<span
-                            class="gradientText"><strong>Value134</strong></span>") is a <span
-                            class="gradientText"><strong>software engineer</strong></span> and a self-taught solo <span
-                            class="gradientText"><strong>game developer</strong></span>.</p>
-                    <h3><span class="gradientText">Socials (where to contact me)</span></h3>
+                    <p><span class="gradient-text"><strong>RngValue</strong></span> (sometimes "<span
+                            class="gradient-text"><strong>Value134</strong></span>") is a <span
+                            class="gradient-text"><strong>software engineer</strong></span> and a self-taught solo <span
+                            class="gradient-text"><strong>game developer</strong></span>.</p>
+                    <h3><span class="gradient-text">Socials (where to contact me)</span></h3>
                     <div class="socialGrid">
                         <div class="socialItem"><a href="https://www.youtube.com/channel/UCL34Zh7mFdQ5PKmeF_DI5Bg">
                                 <svg class="roundShit youtubeSS" viewBox="0 0 512 512">
@@ -122,10 +122,10 @@
                     </div>
                 </section>
                 <section id="games">
-                    <h2><span class="gradientText">GAMES</span></h2>
-                    <p>For game development I use either <span class="gradientText"><strong>Godot</strong></span> or
-                        <span class="gradientText"><strong>Gamemaker: Studio</strong></span>, but mostly <span
-                            class="gradientText"><strong>Godot</strong></span>.<br>(currently experimenting with
+                    <h2><span class="gradient-text">GAMES</span></h2>
+                    <p>For game development I use either <span class="gradient-text"><strong>Godot</strong></span> or
+                        <span class="gradient-text"><strong>Gamemaker: Studio</strong></span>, but mostly <span
+                            class="gradient-text"><strong>Godot</strong></span>.<br>(currently experimenting with
                         Unity and RpgMaker)<br>The games I've decided to share here were all made with Godot.</p>
                     <div class="gameGrid">
                         <div title="Jumping from a high building by RngValue" class="gameItem"><iframe src="https://itch.io/embed/1660711?border_width=0&amp;bg_color=000000&amp;link_color=e38f00" width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/jfahb"></a></iframe></div>
@@ -145,7 +145,7 @@
                     </div>
                 </section>
                 <section id="art" class="general">
-                    <h2><span class="gradientText">ART</span></h2>
+                    <h2><span class="gradient-text">ART</span></h2>
                     <p>The company itself is a very successful company. It will happen to the wise that the architect
                         succeeds, further, but by right, without greed and indeed fault. This option is never taken and
                         the consequences of the debts are therefore held at times. I will never leave open the error of
@@ -172,7 +172,7 @@
                         pleasure of repelling insight often less ad.</p>
                 </section>
                 <section id="ask" class="general">
-                    <h2><span class="gradientText">FAQ</span></h2>
+                    <h2><span class="gradient-text">FAQ</span></h2>
                     <p>The company itself is a very successful company. It will happen to the wise that the architect
                         succeeds, further, but by right, without greed and indeed fault. This option is never taken and
                         the consequences of the debts are therefore held at times. I will never leave open the error of
