--- a/index.html
+++ b/index.html
@@ -128,20 +128,46 @@
                             class="gradient-text"><strong>Godot</strong></span>.<br>(currently experimenting with
                         Unity and RpgMaker)<br>The games I've decided to share here were all made with Godot.</p>
                     <div class="gameGrid">
-                        <div title="Jumping from a high building by RngValue" class="gameItem"><iframe src="https://itch.io/embed/1660711?border_width=0&amp;bg_color=000000&amp;link_color=e38f00" width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/jfahb"></a></iframe></div>
-                        <div title="Frogo Makes You Cry by
-                        RngValue" class="gameItem"><iframe
-                                src="https://itch.io/embed/1579649?border_width=0&amp;bg_color=040000&amp;fg_color=eeeeee&amp;link_color=e38f00&amp;border_color=363636"
-                                width="206" height="165" frameborder="0"><a
-                                    href="https://rngvalue.itch.io/frogomakesyoucry"></a></iframe></div>
-                        <div title="ChaosMachine by RngValue" class="gameItem"><iframe
-                                src="https://itch.io/embed/1408395?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
-                                width="206" height="165" frameborder="0"><a
-                                    href="https://rngvalue.itch.io/chaosmachine"></a></iframe>
+                        <div class="gameItem">
+                            <div class="gameItemAAA" style="display: grid;">
+                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href=""><div class="gameItemStuff">Itch</div></a>
+                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                            </div>
+                            <img style="width: 100%; height: auto" src="gameThumbs\742024-5ce3tn3m-v4.webp" alt="">
                         </div>
-                        <div title="Bilte' by RngValue" class="gameItem"><iframe
-                                src="https://itch.io/embed/1052914?border_width=0&amp;bg_color=000000&amp;link_color=e38f00"
-                                width="206" height="165" frameborder="0"><a href="https://rngvalue.itch.io/bilte"></a></iframe></div>
+                        <div class="gameItem">
+                            <div class="gameItemAAA" style="display: grid;">
+                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href=""><div class="gameItemStuff">Itch</div></a>
+                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                            </div>
+                            <img style="width: 100%; height: auto" src="gameThumbs\734293-crop0_9_629_363-ll-bgyhu3ag-v4.webp" alt="">
+                        </div>
+                        <div class="gameItem">
+                            <div class="gameItemAAA" style="display: grid;">
+                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href=""><div class="gameItemStuff">Itch</div></a>
+                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                            </div>
+                            <img style="width: 100%; height: auto" src="gameThumbs\726445-crop16_72_624_414-d53xzrcr-v4.webp" alt="">
+                        </div>
+                        <div class="gameItem">
+                            <div class="gameItemAAA" style="display: grid;">
+                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href=""><div class="gameItemStuff">Itch</div></a>
+                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                            </div>
+                            <img style="width: 100%; height: auto" src="gameThumbs\3bvoUN.png" alt="">
+                        </div>
+                        <div class="gameItem">
+                            <div class="gameItemAAA" style="display: grid;">
+                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href=""><div class="gameItemStuff">Itch</div></a>
+                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                            </div>
+                            <img style="width: 100%; height: auto" src="gameThumbs\yGwX5X.png" alt="">
+                        </div>
                     </div>
                 </section>
                 <section id="art" class="general">
